Creado mediante Colaboratory

--- a/M2_collab.ipynb
+++ b/M2_collab.ipynb
@@ -6,7 +6,7 @@
       "name": "M2_collab.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNtVTzg0XWgB5ODclx0EWrb",
+      "authorship_tag": "ABX9TyN+lzbZ0sq7obY/A1cu4bcf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,11 +96,11 @@
         "Vamos a graficar el angulo phi\n",
         "\"\"\"\n",
         "\n",
-        "P_t=[]\n",
-        "phi=[]\n",
-        "phi2=[]\n",
-        "Phi=[]\n",
-        "Phi2=[]\n",
+        "P_t=[] #Definimos un vector que llevara el momento transversal\n",
+        "phi=[] #Valores de phi usando el arctan\n",
+        "phi2=[] #Valores de phi usando el arccos\n",
+        "Phi=[] #construir un vector con los valores del primer phi\n",
+        "Phi2=[] #construir un vector con los valores del segundo phi\n",
         "\n",
         "for i in range(len(H)):\n",
         "  P_t=np.sqrt((H[i][1])**2+H[i][2]**2)\n",
@@ -109,10 +109,12 @@
         "  Phi2.append(phi2)\n",
         "  Phi.append(phi)\n",
         "\n",
+        "#Grafico phi usando arccos\n",
         "plt.figure()\n",
         "plt.hist(Phi2)\n",
         "plt.show()\n",
         "\n",
+        "#grafico phi usando arctan\n",
         "plt.figure()\n",
         "plt.hist(Phi)\n",
         "plt.show()\n"
